# FusionCore

./: ARCHITECTURE.md  BLOCKCHAIN_INFO.md  CHANGELOG.md  PHAM_BLOCKCHAIN_LOG.md  README.md  SIGNATURE.sha256  pyproject.toml
fusion_core/: __init__.py  fusion_agent.py
fusion_core/audit/: fusion_chain.py
fusion_core/bridge/: brain_core.py  rocket_spirit.py
fusion_core/contracts/: schemas.py
fusion_core/physics/: integrator.py  propulsion.py  reaction.py  shielding.py  thermal.py
fusion_core/plasma/: confinement.py  plasma_fsm.py
fusion_core/power/: power_bus.py
fusion_core/safety/: abort_system.py  omega_monitor.py
tests/: test_fusion_core.py  test_public_api.py
