[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "fusion-core-stack"
version = "0.1.0"
description = "핵융합 우주 추진 코어 — 에너지·열·추력 동역학 스택"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[tool.pytest.ini_options]
testpaths = ["tests"]
